# mistral_nex_stocks

./: .editorconfig  .flake8  .gitattributes  .gitignore  .mns_shutdown_token  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai_state.py  app.py  app_bg.py  app_helpers.py  app_state.py  bandit_report.json  bandit_report_final.txt  bandit_report_final2.txt  bandit_report_local.txt  commitmsg.txt  config.json.template  config_store.py  config_utils.py  constants.py  coverage.json  credential_manager.py  crypto_utils.py  dl.txt  error_codes.py  error_handlers.py  eslint.config.js  eslint.config.mjs  execution_state.py  gunicorn.conf.py  json  logging_config.py  market_state.py  messaging.py  mistral_compat.py  out.txt  package-lock.json  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.mimocode/plans/: 1781360585464-proud-sailor.md  1781361016083-neon-moon.md  1781362581933-kind-nebula.md  1781526076664-calm-canyon.md  1781873131685-mighty-river.md
.mimocode/skills/security-review/: SKILL.md
chrome_extension/: background.js  manifest.json  popup.css  popup.html  popup.js
docs/: architecture.md
native_host/: com.mistral_nex_stocks.host.json  com.mistral_nex_stocks.host.json.template  diagnose_native_host_windows.ps1  host_launcher.cmd.template  install_host_windows.cmd  install_host_windows.ps1  native_host.cmd  native_host.log.3  native_host.py  start_backend.py  uninstall_host_windows.ps1
reports/: COMPREHENSIVE_CODE_REVIEW.md  REVIEW_SUMMARY_JA.md
routes/: _common.py  api_analysis.py  api_stocks.py  api_system.py  pages.py
scratch/: test_connection_leak.py
services/: ai_service.py  news_formatter.py  news_service.py  search_service.py  stock_provider.py  stock_service.py
services/search/: __init__.py  ddgs.py  langsearch.py  tavily.py
static/css/: colors.css  heatmap.css  index.css  settings.css  setup.css
static/js/: api.js  api_client.js  chart.js  config_init.js  csrf.js  heatmap.js  index.js  index_main.js  settings.js  setup.js  state.js  ui.js  utils.js
templates/: base.html  heatmap.html  index.html  settings.html  setup.html
tests/: __init__.py  conftest.py  test_ai_service_utils.py  test_api_chat_improved.py  test_api_integration.py  test_api_system.py  test_auto_remove_symbols.py  test_build_stock_payload.py  test_chat_history.py  test_config_utils.py  test_config_utils_extra.py  test_core_logic.py  test_cors_security.py  test_coverage_boost.py  test_coverage_config_extra.py  test_coverage_extra.py  test_coverage_extreme_branches.py  test_coverage_extreme_pure.py  test_coverage_extreme_state.py  test_coverage_final.py  test_coverage_pure_extra.py  test_coverage_utils_extra.py  test_csp_header.py  test_csp_report.py  test_csrf_protection.py  test_disk_cache.py  test_disk_cache_extra.py  test_error_handlers.py  test_executor_separation.py  test_extract_json_payload.py  test_formatting.py  test_indices_cache.py  test_input_validation.py  test_langsearch_utils.py  test_leader_election.py  test_llm_repair.py  test_messaging.py  test_messaging_extra.py  test_mistral_compat_coverage.py  test_native_host.py  (+34 more)
utils/: caching.py  chat_history.py  disk_cache.py  env_helpers.py  formatting.py  http_utils.py  market_utils.py  networking.py  normalization.py  stock_payload.py  storage.py  text_utils.py  threading.py  validators.py
