[tool.bandit]
exclude_dirs = ["tests", ".mimocode", "__pycache__"]
skips = [
    "B311",  # random used - not applicable
]

[[tool.bandit.per-file-ignores]]
filenames = ["tests/**/*.py"]
skips = ["B101"]  # assert used - common in tests

[tool.coverage.run]
omit = [
    "tests/*",
    ".mimocode/*",
    "split_js.py",
    "native_host/install_host_windows.ps1",
    "native_host/uninstall_host_windows.ps1",
    "native_host/diagnose_native_host_windows.ps1",
    "native_host/native_host.cmd",
    "native_host/host_launcher.cmd.template",
    "native_host/com.mistral_nex_stocks.host.json",
]

[project]
name = "mistral-nex-stocks"
version = "3.0.0"
description = "AI-Powered Real-time Stock Dashboard with Mistral LLM"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["stocks", "finance", "AI", "mistral", "flask", "dashboard"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
