[tool.bandit]
exclude_dirs = ["tests", ".mimocode", "__pycache__"]
skips = [
    "B311",  # random used - not applicable
]

[[tool.bandit.per-file-ignores]]
filenames = ["tests/**/*.py"]
skips = ["B101"]  # assert used - common in tests

[tool.coverage.run]
omit = [
    "tests/*",
    ".mimocode/*",
    "split_js.py",
    "native_host/install_host_windows.ps1",
    "native_host/uninstall_host_windows.ps1",
    "native_host/diagnose_native_host_windows.ps1",
    "native_host/native_host.cmd",
    "native_host/host_launcher.cmd.template",
    "native_host/com.mistral_nex_stocks.host.json",
]

[project]
name = "mistral-nex-stocks"
version = "3.0.0"
description = "AI-Powered Real-time Stock Dashboard with Mistral LLM"
requires-python = ">=3.9"
license = {text = "MIT"}
keywords = ["stocks", "finance", "AI", "mistral", "flask", "dashboard"]
dependencies = [
    "Flask>=3.1.3,<3.2",
    "pandas>=2.2,<4.0",
    "pydantic>=2.0,<3.0",
    "requests>=2.33.0",
    "tenacity>=9.0,<10",
    "mistralai>=2.4,<3.0",
    "yfinance>=0.2.60,<2.0",
    "curl_cffi>=0.15,<1.0",
    "ddgs>=9.9,<11.0",
    "cachetools>=5.4,<8",
    "feedparser>=6.0.1,<7",
    "pytrends-modern>=0.2.5,<0.3",
    "psutil>=5.9.8,<8",
    "keyring>=25.0,<27",
    "flask-wtf>=1.2.1,<2.0",
    "flask-talisman>=1.1.0,<2.0",
    "python-json-logger>=2.0.2,<5.0",
]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = [
    "app.py",
    "app_bg.py",
    "app_helpers.py",
    "app_state.py",
    "config_utils.py",
    "constants.py",
    "error_codes.py",
    "error_handlers.py",
    "mistral_compat.py",
    "route_helpers.py",
    "routes",
    "services",
    "trend_sources.py",
    "utils",
]
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
check_untyped_defs = true

